--- a/.github/ISSUE_TEMPLATE/issue_template_back.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template_back.yml
@@ -7,7 +7,7 @@ assignees: []
 body:
   - type: markdown
     attributes:
-      value: 
+      value: |
         ## 📌 Task Overview
         어떤 서비스를 개발하는지, 그리고 어떤 기능을 담당하는지 간략하게 설명해주세요.
 
@@ -22,30 +22,26 @@ body:
         - label: 서비스 로직(Business Logic) 개발
         - label: Mapper 설계
         - label: View 연결
-        
 
   - type: textarea
     id: api-details
     attributes:
       label: 🔗 Controller 설계/구현
-      placeholder: 
+      placeholder: |
         - Method: POST / GET / PATCH / DELETE
         - Endpoint: /api/v1/resource
         - Request Body / Query Params 예시를 적어주세요.
 
-
   - type: textarea
-    id: database-changeㄹ
+    id: database-change
     attributes:
       label: 💾 Database Changes
       placeholder: "테이블 생성, 컬럼 추가 등 DB 스키마 변경 사항이 있다면 작성해주세요."
 
-
-        - type: textarea
+  - type: textarea
     id: technical-note
     attributes:
       label: 🛠 Technical Notes
-      placeholder: 
+      placeholder: |
         - 특이사항이나 구현 시 고려해야 할 설계 구조가 있다면 작성해주세요.
         - 사용한 라이브러리나 특정 알고리즘이 있다면 기록하세요.
-
